# -bank_project

./: README.md  index.html  main.py  my_log.txt  pyproject.toml
src/: decorators.py  generators.py  index.html  masks.py  processing.py  widget.py
tests/: conftest.py  test_code.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
